LEGEND
------
  [!] New plugin
  [+] New feature
  [*] Enhancement
  [-] Bug fix


------
  [+] Added status iconset for "vKontakte" users
  [+] Send button is added to the messages standard input field
  [*] In the case when failed to identify a registered conference nick, by default invited to use the nickname from the vCard
  [-] Unable to login to some servers in some cases
  [-] History continues to load from a local file after switching to a server archive
  [-] When the replication of server archive is enabled than the ongoing chat could not completely copied to a local disk


v1.0.1
------
  [+] Added a notification when referring to you in the conference
  [+] Added option to automatically activate the notification
  [+] Added possibility to open all active conference
  [+] Added possibility to insert a nick on middle mouse click on the conference user 
  [+] Added Polish localization (thanks les.kamil)
  [+] Added the ability to quickly add a user through the gateways in the account context menu
  [+] Button added to easily enable or disable sound notification
  [+] Added ability to quote the selected text in chat windows and conferences
  [+] Added ability to insert date and start time of inactivity in the auto status message
  [+] Added ability to copy to the clipboard, some parameters of the roster elements
  [*] Significantly redesigned interface of chat windows and conferences
  [*] Implemented sorting user affiliation and roles in conferences
  [*] Adium message style yMous in a white version set as default
  [*] Optimized manage subscriptions
  [*] Changed way to connect to GTalk account, so that the server could not change the connection resource
  [*] Added the possibility not to transfer the OS version in response to request for information about the client
  [*] Improved algorithm for management account status
  [*] In the message kik/ban user in the conference indicated its real Jabber ID